--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -186,7 +186,26 @@ Investigaciones Científicas y Técnicas)},addressline={Avenida Maipú
 
         
 \begin{abstract}
-This document is a template demonstrating the Aps format.
+This study provides a short reassessment of the use of Magnesium to
+Calcium (Mg/Ca) ratios in Atlantic limpet shells to determine past sea
+surface temperatures. While \emph{Patella vulgata} along the Spanish
+shoreline has since then repeatedly produced reliable correlations
+between sea surface temperature and Mg/Ca ratios, this is not the case
+for other patelloid species. \emph{Patella vulgata} and \emph{Nacella
+deaureata} have been studied using Mg/Ca with mixed or contrary results.
+In this study, we present elemental maps of various such species
+together with stable oxygen isotope values for some of the specimens.
+Our dataset also includes specimens that were previously unsuccessful in
+providing significant correlations between δ\textsuperscript{18}O and
+Mg/Ca ratios. By reassessing these previous specimens and including a
+wider range of modern and archaeological samples from three patelloid
+species (\emph{P. vulgata}, \emph{N. deaureata}, and \emph{N.
+magellanica}) we further add to the growing set of evidence for the
+reliable use of Mg/Ca ratios to detect palaeotemperature change and
+serve as a means to determine ontogenetic age and season of capture as
+well as to reveal locations of interest within the growth record
+(i.e.~annual temperature minima and maxima) for the targeted analysis
+using δ\textsuperscript{18}O or clumped oxygen isotope analysis.
 \end{abstract}
 
 
@@ -201,26 +220,136 @@ This document is a template demonstrating the Aps format.
     
 \section{Introduction}\label{Introduction}
 
-This study provides a short reassessment of the use of Magnesium to
-Calcium (Mg/Ca) ratios in Atlantic limpet shells to determine past sea
-surface temperatures. While recent studies of particularly
-\emph{Patella} sp. in the Mediterranean and Southwest Europe have
-provided promising results
+Limpet shells are commonly found within archaeological sites and and
+past shorelines due to their robust carbonate structure and the
+long-term use of limpets as a marine food source. They have successfully
+been studied in the past in the context of coastal subsistence
+economies, site occupation on seasonal
+\citep{shackleton1973, Parker2018-wf, Bosch2018-ud} or long-term scale
+\citep{Ortiz2015-mr}, as well as palaeotemperature
+\citep{Fenger2007-gf, Surge2012-ba, Wang2012-ee, Colonese2012-ct, Ferguson2011-zl}.
+Determining past sea surface temperature (SST) change largely relies on
+the measurement of δ\textsuperscript{18}O-values within the calcitic
+parts of the shell, but attempts have been made to also use elemental
+ratios, such as magnesium to calcium (Mg/Ca), to have an alternative
+measure, that potentially provides a more accurate SST estimate than
+δ\textsuperscript{18}O-values, which are also affected by changes in
+salinity. In addition, the data acquisition of elemental ratios ---
+either through laser-ablation-isotope-ratio-mass-spectrometry
+(LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much
+faster and cost-effective, increasing the number of specimens that can
+be studied overall \citep{Durham2017-fh, Hausmann2023-ih}.
+
+Problematically, links between Mg/Ca ratios and SST changes in limpets
+have also been shown to be unreliable \citep{Graniero2015-zv} and even
+where they were successful, anomalous patterns in some specimens had to
+be filtered out, reducing the overall robustness of the results of those
+successful studies \citep{Ferguson2011-zl}.
+
+While recent research particularly of \emph{Patella} sp. in the
+Mediterranean and Southwest Europe have provided promising results
 \citep{Hausmann2019-fi, Garcia-Escarzaga2015-jc, Garcia-Escarzaga2018-nf}.
+There remains unclarity for Atlantic limpet species, particularly since
+it was last shown here, that they are not reliable recorders of
+palaeotemperature \citep{Graniero2015-zv}.
 
-In previous studies, various limpet specimens (Patella vulgata, Nacella
-magellanica and Nacella odifosdio) have been studied using Mg/Ca with
-mixed results. While Patella vulgata along the Spanish shoreline has
-since then repeatedly produced reliable correlations between sst and
-Mg/Ca ratios, this is not the case for other species.
+\section{Materials and Methods}\label{Methods}
 
-In this study, we present elemental maps of various such species
-together with stable oxygen isotope values for some of the specimens.
-Some of these\ldots{}
+\subsection{Limpet specimens}\label{limpet-specimens}
 
-\section{Methods}\label{Methods}
+\subsubsection{Modern specimens}\label{modern-specimens}
+
+The analysed specimens, their origin and studies with background
+information can be found in Table 1.
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}@{}}
+\caption{Table 1 Overview of the modern and archaeological limpet
+specimens analysed in this study \{\#tab:specimens\}}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Context
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Study
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Species
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Location
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Sample ID
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Previous analyses
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Context
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Study
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Species
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Location
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Sample ID
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Previous analyses
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+Modern & \citep{Nicastro2020-ih} & \emph{N. deaureata} & Bahía
+Cambaceres Exterior - Tierra del Fuego (AR) & ND-1016-3 & Stable oxygen
+and carbon isotope analysis \\
+& & & & ND-1016-4 & \\
+& & \emph{N. magellanica} & & NM-1016-1 & \\
+& & & & NM-1016-3 & \\
+& \citep{Graniero2017-io} & \emph{P. vulgata} & Rack Wick Bay - Westray
+(UK) & ORK-LT5 & Stable oxygen and carbon isotope analysis; Mg, Li, Sr,
+Ca,. \\
+Archaeological & \citep{Surge2012-ba} & \emph{P. vulgata} & Rack Wick
+Bay - Westray (UK) & QG1-7188-1 & Stable oxygen and carbon isotope
+analysis \\
+& & & & QG1-7189-2 & \\
+& & & & QG2-1061-1 & \\
+& & & & QG2-1064-1 & \\
+& & & & QG2-7180-1 & \\
+& & & & QG2-7180-2 & \\
+& & & & QG1-7246-1 & \\
+& This study & \emph{N. magellanica} & Heshkaia 35 & Heshkaia\_35-1 &
+\emph{none} \\
+& & \emph{N. deaureata} & & Heshkaia\_35-2 & \\
+& & \emph{N. deaureata} & & Heshkaia\_35-3 & \\
+& & \emph{N. magellanica} & & Heshkaia\_35-4 & \\
+& & \emph{N. magellanica} & & Heshkaia\_35-5 & \\
+& & \emph{N. magellanica} & & Heshkaia\_35-6 & \\
+& & \emph{N. magellanica} & & Heshkaia\_35-7 & \\
+& & \emph{N. deaureata} & & Heshkaia\_35-8 & \\
+& & \emph{N. magellanica} & & Heshkaia\_35-9 & \\
+\end{longtable}
+
+\subsubsection{Archaeological specimens}\label{archaeological-specimens}
+
+\subsection{Oxygen isotopes}\label{oxygen-isotopes}
+
+\subsection{Mg/Ca ratios}\label{mgca-ratios}
 
 \section{Results}\label{Results}
+
+\subsection{Patella vulgata}\label{patella-vulgata}
+
+\subsection{Nacella deaureata}\label{nacella-deaureata}
+
+\subsection{Nacella magellanica}\label{nacella-magellanica}
+
+\section{}\label{section}
 
 \begin{figure}[H]
 
@@ -234,6 +363,8 @@ Some of these\ldots{}
 
 \section{Discussion}\label{discussion}
 
+\subsection{Other correlations}\label{other-correlations}
+
 \begin{figure}[H]
 
 {\centering \includegraphics{Manuscript_files/figure-pdf/Ferguson Data-1.pdf}
@@ -245,12 +376,12 @@ Some of these\ldots{}
 \end{figure}%
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1528}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.3889}}@{}}
-\caption{Overview of comparative correlations
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2000}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2000}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2000}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2000}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2000}}@{}}
+\caption{Table 2: Overview of comparative correlations
 \{\#tab:correlations\}}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
@@ -282,13 +413,12 @@ Study
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-\emph{Patella depressa} & Northern Spain & LAN541 & 0.87 &
-\href{https://doi.org/10.3390/app11072959}{\textbf{10.3390/app11072959}} \\
+\emph{P. depressa} & Northern Spain & LAN541 & 0.87 &
+\citep{garcía-escárzaga2021} \\
 & & LAN545 & 0.86 & \\
 & & LAN554 & 0.78 & \\
 & & LAN559 & 0.82 & \\
-\emph{Patella caerulea} & Croatia & ISTPC1 & 0.9 &
-10.1038/s41598-019-39959-9 \\
+\emph{P. caerulea} & Croatia & ISTPC1 & 0.9 & \citep{Hausmann2019-fi} \\
 & & ISTPC2 & 0.84 & \\
 & Crete & AF1911A & 0.91\footnote{SST only, no other geochemical data
   available} & \\
@@ -309,19 +439,18 @@ Study
 & & ANTPC2 & 0.93 & \\
 & & KIZPC1 & 0.94 & \\
 & & KIZPC2 & 0.86 & \\
-Patella rustica & Gibraltar & JL1 & 0.02 &
-\href{https://doi.org/10.1016/j.epsl.2011.05.054}{doi.org/10.1016/j.epsl.2011.05.054} \\
+\emph{P. rustica} & Gibraltar & JL1 & 0.02 & \citep{Ferguson2011-zl} \\
 & & JL2 & 0.8 (0.79) & \\
-Patella caerulea & Gibraltar & JM00 & 0.69 (0.79) & \\
+\emph{P. caerulea} & Gibraltar & JM00 & 0.69 (0.79) & \\
 & & JM30 & 0.83 (0.79) & \\
-Patella vulgata & Orkney & ORK-LT5 & not reported, here 0.88 &
-doi.org/10.1016/j.palaeo.2016.10.021 and this study \\
+\emph{P. vulgata} & Orkney & ORK-LT5 & not reported, here 0.88 &
+\citep{Graniero2017-io} and this study \\
 & & & & \\
 & & & & \\
 & & & & \\
 \end{longtable}
 
-\subsection{Reanalysis of ORK-LT5}\label{reanalysis-of-ork-lt5}
+\subsection{Comparison of ORK-LT5}\label{comparison-of-ork-lt5}
 
 \includegraphics{Manuscript_files/figure-pdf/unnamed-chunk-1-1.pdf}
 
