--- a/Manuscript.qmd
+++ b/Manuscript.qmd
@@ -106,13 +106,45 @@ Ferguson_data <- read_csv(here("data","Ferguson-data.csv")) %>%
 
 ```
 
-While recent studies of particularly *Patella* sp. in the Mediterranean and Southwest Europe have provided promising results [@Hausmann2019-fi; @Garcia-Escarzaga2015-jc; @Garcia-Escarzaga2018-nf].
+Limpet shells are commonly found within archaeological sites and and past shorelines due to their robust carbonate structure and the long-term use of limpets as a marine food source. They have successfully been studied in the past in the context of coastal subsistence economies, site occupation on seasonal [@shackleton1973; @Parker2018-wf; @Bosch2018-ud] or long-term scale [@Ortiz2015-mr], as well as palaeotemperature [@Fenger2007-gf; @Surge2012-ba; @Wang2012-ee; @Colonese2012-ct; @Ferguson2011-zl]. Determining past sea surface temperature (SST) change largely relies on the measurement of δ^18^O-values within the calcitic parts of the shell, but attempts have been made to also use elemental ratios, such as magnesium to calcium (Mg/Ca), to have an alternative measure, that potentially provides a more accurate SST estimate than δ^18^O-values, which are also affected by changes in salinity. In addition, the data acquisition of elemental ratios — either through laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much faster and cost-effective, increasing the number of specimens that can be studied overall [@Durham2017-fh; @Hausmann2023-ih].
+
+Problematically, links between Mg/Ca ratios and SST changes in limpets have also been shown to be unreliable [@Graniero2015-zv] and even where they were successful, anomalous patterns in some specimens had to be filtered out, reducing the overall robustness of the results of those successful studies [@Ferguson2011-zl].
+
+While recent research particularly of *Patella* sp. in the Mediterranean and Southwest Europe have provided promising results [@Hausmann2019-fi; @Garcia-Escarzaga2015-jc; @Garcia-Escarzaga2018-nf]. There remains unclarity for Atlantic limpet species, particularly since it was last shown here, that they are not reliable recorders of palaeotemperature [@Graniero2015-zv].
 
 # Materials and Methods {#Methods}
 
 ## Limpet specimens
 
 ### Modern specimens
+
+The analysed specimens, their origin and studies with background information can be found in Table 1.
+
+| Context        | Study              | Species          | Location                                          | Sample ID     | Previous analyses                                           |
+|------------|------------|------------|------------|------------|------------|
+| Modern         | [@Nicastro2020-ih] | *N. deaureata*   | Bahía Cambaceres Exterior - Tierra del Fuego (AR) | ND-1016-3     | Stable oxygen and carbon isotope analysis                   |
+|                |                    |                  |                                                   | ND-1016-4     |                                                             |
+|                |                    | *N. magellanica* |                                                   | NM-1016-1     |                                                             |
+|                |                    |                  |                                                   | NM-1016-3     |                                                             |
+|                | [@Graniero2017-io] | *P. vulgata*     | Rack Wick Bay - Westray (UK)                      | ORK-LT5       | Stable oxygen and carbon isotope analysis; Mg, Li, Sr, Ca,. |
+| Archaeological | [@Surge2012-ba]    | *P. vulgata*     | Rack Wick Bay - Westray (UK)                      | QG1-7188-1    | Stable oxygen and carbon isotope analysis                   |
+|                |                    |                  |                                                   | QG1-7189-2    |                                                             |
+|                |                    |                  |                                                   | QG2-1061-1    |                                                             |
+|                |                    |                  |                                                   | QG2-1064-1    |                                                             |
+|                |                    |                  |                                                   | QG2-7180-1    |                                                             |
+|                |                    |                  |                                                   | QG2-7180-2    |                                                             |
+|                |                    |                  |                                                   | QG1-7246-1    |                                                             |
+|                | This study         | *N. magellanica* | Heshkaia 35                                       | Heshkaia_35-1 | *none*                                                      |
+|                |                    | *N. deaureata*   |                                                   | Heshkaia_35-2 |                                                             |
+|                |                    | *N. deaureata*   |                                                   | Heshkaia_35-3 |                                                             |
+|                |                    | *N. magellanica* |                                                   | Heshkaia_35-4 |                                                             |
+|                |                    | *N. magellanica* |                                                   | Heshkaia_35-5 |                                                             |
+|                |                    | *N. magellanica* |                                                   | Heshkaia_35-6 |                                                             |
+|                |                    | *N. magellanica* |                                                   | Heshkaia_35-7 |                                                             |
+|                |                    | *N. deaureata*   |                                                   | Heshkaia_35-8 |                                                             |
+|                |                    | *N. magellanica* |                                                   | Heshkaia_35-9 |                                                             |
+
+: Table 1 Overview of the modern and archaeological limpet specimens analysed in this study {#tab:specimens}
 
 ### Archaeological specimens
 
@@ -265,41 +297,41 @@ Ferg_all/Ferg_individual+plot_layout(heights = c(0.5,0.5))
 
 ```
 
-| Species            | Locality       | Specimen | Correlation R^2^        | Study                                                                                                                              |
-|-------------|-------------|-------------|-------------|----------------------|
-| *Patella depressa* | Northern Spain | LAN541   | 0.87                    | [**10.3390/app11072959**](https://doi.org/10.3390/app11072959)                                                                     |
-|                    |                | LAN545   | 0.86                    |                                                                                                                                    |
-|                    |                | LAN554   | 0.78                    |                                                                                                                                    |
-|                    |                | LAN559   | 0.82                    |                                                                                                                                    |
-| *Patella caerulea* | Croatia        | ISTPC1   | 0.9                     | 10.1038/s41598-019-39959-9                                                                                                         |
-|                    |                | ISTPC2   | 0.84                    |                                                                                                                                    |
-|                    | Crete          | AF1911A  | 0.91[^1]                |                                                                                                                                    |
-|                    |                | AF3003A  | 0.92[^2]                |                                                                                                                                    |
-|                    | Israel         | AKKPC2   | 0.96                    |                                                                                                                                    |
-|                    |                | AKKPC3   | 0.89                    |                                                                                                                                    |
-|                    |                | FRMPC1   | 0.84                    |                                                                                                                                    |
-|                    |                | FRMPC2   | 0.96                    |                                                                                                                                    |
-|                    | Libya          | MO31A    | 0.83                    |                                                                                                                                    |
-|                    |                | MP64A    | 0.33                    |                                                                                                                                    |
-|                    |                | MP67A    | 0.96                    |                                                                                                                                    |
-|                    |                | MP68A    | 0.81                    |                                                                                                                                    |
-|                    | Malta          | MA10     | 0.82                    |                                                                                                                                    |
-|                    | Tunisia        | TUNPC1   | 0.81                    |                                                                                                                                    |
-|                    |                | TUNPC2   | 0.78                    |                                                                                                                                    |
-|                    | Turkey         | ANTPC1   | 0.95                    |                                                                                                                                    |
-|                    |                | ANTPC2   | 0.93                    |                                                                                                                                    |
-|                    |                | KIZPC1   | 0.94                    |                                                                                                                                    |
-|                    |                | KIZPC2   | 0.86                    |                                                                                                                                    |
-| Patella rustica    | Gibraltar      | JL1      | 0.02                    | [doi.org/10.1016/j.epsl.2011.05.054](https://doi.org/10.1016/j.epsl.2011.05.054 "Persistent link using digital object identifier") |
-|                    |                | JL2      | 0.8 (0.79)              |                                                                                                                                    |
-| Patella caerulea   | Gibraltar      | JM00     | 0.69 (0.79)             |                                                                                                                                    |
-|                    |                | JM30     | 0.83 (0.79)             |                                                                                                                                    |
-| Patella vulgata    | Orkney         | ORK-LT5  | not reported, here 0.88 | doi.org/10.1016/j.palaeo.2016.10.021 and this study                                                                                |
-|                    |                |          |                         |                                                                                                                                    |
-|                    |                |          |                         |                                                                                                                                    |
-|                    |                |          |                         |                                                                                                                                    |
+| Species       | Locality       | Specimen | Correlation R^2^        | Study                             |
+|---------------|---------------|---------------|---------------|---------------|
+| *P. depressa* | Northern Spain | LAN541   | 0.87                    | [@garcía-escárzaga2021]           |
+|               |                | LAN545   | 0.86                    |                                   |
+|               |                | LAN554   | 0.78                    |                                   |
+|               |                | LAN559   | 0.82                    |                                   |
+| *P. caerulea* | Croatia        | ISTPC1   | 0.9                     | [@Hausmann2019-fi]                |
+|               |                | ISTPC2   | 0.84                    |                                   |
+|               | Crete          | AF1911A  | 0.91[^1]                |                                   |
+|               |                | AF3003A  | 0.92[^2]                |                                   |
+|               | Israel         | AKKPC2   | 0.96                    |                                   |
+|               |                | AKKPC3   | 0.89                    |                                   |
+|               |                | FRMPC1   | 0.84                    |                                   |
+|               |                | FRMPC2   | 0.96                    |                                   |
+|               | Libya          | MO31A    | 0.83                    |                                   |
+|               |                | MP64A    | 0.33                    |                                   |
+|               |                | MP67A    | 0.96                    |                                   |
+|               |                | MP68A    | 0.81                    |                                   |
+|               | Malta          | MA10     | 0.82                    |                                   |
+|               | Tunisia        | TUNPC1   | 0.81                    |                                   |
+|               |                | TUNPC2   | 0.78                    |                                   |
+|               | Turkey         | ANTPC1   | 0.95                    |                                   |
+|               |                | ANTPC2   | 0.93                    |                                   |
+|               |                | KIZPC1   | 0.94                    |                                   |
+|               |                | KIZPC2   | 0.86                    |                                   |
+| *P. rustica*  | Gibraltar      | JL1      | 0.02                    | [@Ferguson2011-zl]                |
+|               |                | JL2      | 0.8 (0.79)              |                                   |
+| *P. caerulea* | Gibraltar      | JM00     | 0.69 (0.79)             |                                   |
+|               |                | JM30     | 0.83 (0.79)             |                                   |
+| *P. vulgata*  | Orkney         | ORK-LT5  | not reported, here 0.88 | [@Graniero2017-io] and this study |
+|               |                |          |                         |                                   |
+|               |                |          |                         |                                   |
+|               |                |          |                         |                                   |
 
-: Overview of comparative correlations {#tab:correlations}
+: Table 2: Overview of comparative correlations {#tab:correlations}
 
 [^1]: SST only, no other geochemical data available
 
