--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52732,3 +52732,33 @@
   year        =  2014,
   original_id = "c714fb66-089b-00b9-a319-209c65f29027"
 }
+
+@article{garcía-escárzaga2021,
+	title = {Using Mg/Ca Ratios from the Limpet Patella depressa Pennant, 1777 Measured by Laser-Induced Breakdown Spectroscopy (LIBS) to Reconstruct Paleoclimate},
+	author = {{García-Escárzaga}, Asier and {Martínez-Minchero}, Marina and Cobo, Adolfo and {Gutiérrez-Zugasti}, Igor and Arrizabalaga, Alvaro and Roberts, Patrick},
+	year = {2021},
+	month = {03},
+	date = {2021-03-25},
+	journal = {Applied Sciences},
+	pages = {2959},
+	volume = {11},
+	number = {7},
+	doi = {10.3390/app11072959},
+	url = {http://dx.doi.org/10.3390/app11072959},
+	langid = {en}
+}
+
+@article{shackleton1973,
+	title = {OXYGEN ISOTOPE ANALYSIS AS A MEANS OF DETERMINING SEASON OF OCCUPATION OF PREHISTORIC MIDDEN SITES},
+	author = {SHACKLETON, N. J.},
+	year = {1973},
+	month = {02},
+	date = {1973-02},
+	journal = {Archaeometry},
+	pages = {133--141},
+	volume = {15},
+	number = {1},
+	doi = {10.1111/j.1475-4754.1973.tb00082.x},
+	url = {http://dx.doi.org/10.1111/j.1475-4754.1973.tb00082.x},
+	langid = {en}
+}
