--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52749,8 +52749,8 @@
 }
 
 @article{shackleton1973,
-	title = {OXYGEN ISOTOPE ANALYSIS AS A MEANS OF DETERMINING SEASON OF OCCUPATION OF PREHISTORIC MIDDEN SITES},
-	author = {SHACKLETON, N. J.},
+	title = {Oxygen isotope analysis as a means of determining season of occupation of prehistoric midden sites},
+	author = {Shackleton, N. J.},
 	year = {1973},
 	month = {02},
 	date = {1973-02},
