--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -277,8 +277,19 @@ elemental ratios in other marine mollusc shells.
 
 \subsubsection{Modern specimens}\label{modern-specimens}
 
-The analysed specimens, their origin and studies with background
-information can be found in Table 1.
+The analysed specimens, their origin and respective studies with
+research background information can be found in Table 1. Here we will
+briefly summarise their contextual information, which can be accessed in
+more detail at the respective studies
+\citep{Nicastro2020-ih, Surge2012-ba, Graniero2017-io}. While those
+studies also included other specimens, their accessibility or state of
+preservation did not all lend them to be re-analysed.
+
+There are two main locations that we sourced specimens from: the island
+of West Ray in Orkney (UK) and the Beagle Channel in Tierra del Fuego
+(Argentina). A modern shell on West Ray was collected in Rack Wick Bay
+in August 2009, which experiences virtually no freshwater input. The
+temperature
 
 \begin{longtable}[]{@{}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
@@ -323,9 +334,9 @@ Previous analyses
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Modern & \citep{Nicastro2020-ih} & \emph{N. deaureata} & Bahía
-Cambaceres Exterior - Tierra del Fuego (AR) & ND-1016-3 & Stable oxygen
-and carbon isotope analysis \\
+Modern & \citep{Nicastro2020-ih} & \emph{N. deaureata} & Cambaceres Bay
+- Tierra del Fuego (AR) & ND-1016-3 & Stable oxygen and carbon isotope
+analysis \\
 & & & & ND-1016-4 & \\
 & & \emph{N. magellanica} & & NM-1016-1 & \\
 & & & & NM-1016-3 & \\
@@ -341,8 +352,8 @@ analysis \\
 & & & & QG2-7180-1 & \\
 & & & & QG2-7180-2 & \\
 & & & & QG1-7246-1 & \\
-& This study & \emph{N. magellanica} & Heshkaia 35 & Heshkaia\_35-1 &
-\emph{none} \\
+& This study & \emph{N. magellanica} & Heshkaia 35 in Moat Bay - Tierra
+del Fuego (AR) & Heshkaia\_35-1 & \emph{none} \\
 & & \emph{N. deaureata} & & Heshkaia\_35-2 & \\
 & & \emph{N. deaureata} & & Heshkaia\_35-3 & \\
 & & \emph{N. magellanica} & & Heshkaia\_35-4 & \\
@@ -352,6 +363,17 @@ analysis \\
 & & \emph{N. deaureata} & & Heshkaia\_35-8 & \\
 & & \emph{N. magellanica} & & Heshkaia\_35-9 & \\
 \end{longtable}
+
+\begin{figure}[H]
+
+{\centering \includegraphics{Manuscript_files/figure-pdf/SST Data-1.pdf}
+
+}
+
+\caption{SST values averaged over the last 20 years. SST values were
+sourced from \citep{europeanunion-copernicusmarineservice2015}}
+
+\end{figure}%
 
 \subsubsection{Archaeological specimens}\label{archaeological-specimens}
 
