--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52762,3 +52762,14 @@
 	url = {http://dx.doi.org/10.1111/j.1475-4754.1973.tb00082.x},
 	langid = {en}
 }
+
+@misc{europeanunion-copernicusmarineservice2015,
+	title = {Global Ocean OSTIA Sea Surface Temperature and Sea Ice Analysis},
+	author = {{European Union-Copernicus Marine Service}},
+	year = {2015},
+	date = {2015},
+	publisher = {Mercator Ocean International},
+	doi = {10.48670/MOI-00165},
+	url = {https://resources.marine.copernicus.eu/product-detail/SST_GLO_SST_L4_NRT_OBSERVATIONS_010_001/INFORMATION},
+	langid = {en}
+}
